--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "dependencies": {
     "async": "^2.1.4",
-    "csv": "^1.1.0",
+    "child_process": "^1.0.2",
+    "csv-parse": "^1.1.7",
     "easy-zip": "0.0.4",
     "fs-extra": "^1.0.0",
-    "lodash": "^4.17.3"
+    "lodash": "^4.17.3",
+    "path": "^0.12.7"
   }
 }
