--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "easy-zip": "0.0.4",
     "fs-extra": "^1.0.0",
     "lodash": "^4.17.3",
+    "npm-run": "^4.1.0",
     "path": "^0.12.7"
   }
 }
